Minor stretch fix

--- a/src/app/Components/style.css
+++ b/src/app/Components/style.css
@@ -110,6 +110,7 @@
 .header {
   position: sticky;
   top: 0;
+  width: 100%;
   z-index: 50;
   transition: transform 200ms ease;
 }
@@ -207,6 +208,7 @@
   margin-top: 2rem;
   display: block;
   min-height: 75vh;
+  width: 100%;
 }
 
 .vh-screen {
@@ -230,6 +232,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  width: 100%;
 }
 
 .section-title {
